--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ project: e14
 walltime: 05:00:00
 ncpus: 1477
 mem: 2900GB
-jobname: NYFhstnd
+jobname: NYFbtide
 
 #collate_walltime: 10:00:00
 #collate_mem: 16GB
@@ -18,7 +18,7 @@ collate_exe: /short/v45/aph502/mom/bin/mppnccombine
 # Model config
 model: mom
 shortpath: /short/e14
-exe: fms_MOM_SIS.x
+exe: fms_MOM_SIS_subgm.x
 input:
      - mom025/mask_1920
      - gfdl_nyf_1080_clean
